Milestone 12: Split app.py into modules (646 lines from 2045)
Extract AI orchestration (app_ai.py), report rendering (app_render.py),
audit tab (app_audit.py), and realtime monitoring (app_realtime.py).
All 385 tests pass. Re-exports maintain backwards compatibility.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>